<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PolyAssist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_speech_to_text">speechToText</string>
    <string name="sms_label">Latest SMS</string>
    <string name="none">None</string>
    <string name="speech_toggle_on">Turn on SMS Reader</string>
    <string name="speech_toggle_off">Turn off SMS Reader</string>
    <string name="start_speaking">I will read your messages out loud for you now.</string>
    <string name="stop_speaking">I will not read out your text messages.</string>
    <string name="Settings" />
    <string name="Tutorial" />
    <string name="TTS" />

    <string name="sms_settings">SMS Reader</string>
    <string name="sms_summary">Reads out your incoming texts using the Text-to-Speech engine.</string>

    <string name="bootup_settings">Start On Bootup</string>
    <string name="bootup_summary">Automatically start the application on bootup</string>

    <string name="background_settings">Enable background running service</string>
    <string name="background_summary">Run the app in the background of your phone to prevent the app from closing accidentally.</string>

    <string name="accessibility_settings">Open Accessibility Settings</string>
    <string name="accessibility_summary">Open the accessibility settings to enable further options and enable the floating action button.</string>


    <string name="fab_settings">Accessibility Menu</string>
    <string name="menu_enabled">Menu enabled.</string>
    <string name="menu_disabled">Menu disabled.</string>
    <string name="power">Power</string>
    <string name="volume">Vol +</string>
    <string name="volumeDown">Vol -</string>
    <string name="scroll">Scroll</string>
    <string name="swipe">Swipe</string>
    <string name="openApp">Open App</string>
    <string name="accessibilityDesc"> Enables a toolbar overlay for users that struggle to reach the power button/volume button and use swipe gestures</string>


    <string name="ok">OK</string>
    <string name="info"></string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

</resources>
